--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 .h1Style{
     color:tomato;
     background-color: whitesmoke;
-    padding-top: 0px;   
+    padding-top: 10px;
+    margin-top: 100%;   
 }
