--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .h1Style{
     color:tomato;
-    background-color: whitesmoke;
+    background-color: aquamarine;
     padding-top: 10px;
     margin-top: 100%;   
 }
